# messenger_fastapi

./: chat.db  main.py  pyproject.toml
templates/: chat.html  login.html
